--- a/css/modules/layout.css
+++ b/css/modules/layout.css
@@ -1,12 +1,16 @@
 body {
+    color: var(--text-primary);
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.full-container {
     background-image: url('../../background.png');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-color: var(--bg-primary);
-    color: var(--text-primary);
-    transition: background-color 0.3s, color 0.3s;
+    padding: 0;
 }
 
 .container {
